2023-01-22  Mark Wielaard  <mark@klomp.org>

	* testfile-inlines-lto.bz2: New testfile.
	* run-addr2line-i-test.sh: Add new lto inlines test.
	* Makefile.am (EXTRA_DIST): Add testfile-inlines-lto.bz2.

2023-01-19  Mark Wielaard  <mark@klomp.org>

	* run-addr2line-C-test.sh: New test.
	* Makefile.am (TESTS): Add run-addr2line-C-test.sh.
	(EXTRA_DIST): Likewise.

2023-01-19  Mark Wielaard  <mark@klomp.org>

	* run-debuginfod-query-retry.sh: Use libdebuginfod.so.1 instead
	of /bin/sh as test file.

2022-12-21  Shahab Vahedi  <shahab@synopsys.email>

	* hello_arc_hs4.ko.bz2: New testfile.
	* run-strip-reloc.sh: Add ARC HS4 test.
	* Makefile.am (EXTRA_DIST): Add hello_arc_hs4.ko.bz2.

2022-11-01  Aaron Merey  <amerey@redhat.com>

	* run-debuginfod-section.sh (RPM_BUILDID): Use buildid from non-zstd
	compressed rpm.

2022-10-31  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (TESTS): Add run-debuginfod-section.sh.
	* run-debuginfod-section.sh: New test.

2022-09-20  Yonggang Luo  <luoyonggang@gmail.com>

	* Makefile.am (EXTRA_DIST): Remove debuginfod-rpms/hello2.spec.
	Add debuginfod-rpms/hello{2,3}.specfile.
	* tests/debuginfod-rpms/hello2.spec.: Renamed to...
	* tests/debuginfod-rpms/hello2.specfile: ...this.
	* tests/debuginfod-rpms/hello3.spec.: Renamed to...
	* tests/debuginfod-rpms/hello3.specfile: ...this.

2022-10-28  Arsen Arsenović  <arsen@aarsen.me>

	* run-readelf-s.sh: Add tests for the --syms alias.

2022-10-27  Mark Wielaard  <mark@klomp.org>

	* backtrace-subr.sh: Use grep -E instead of egrep, use grep -F
	instead of fgrep.
	* debuginfod-subr.sh: Likewise.
	* run-debuginfod-archive-rename.sh: Likewise.
	* run-debuginfod-extraction-passive.sh: Likewise.
	* run-debuginfod-response-headers.sh: Likewise.
	* run-debuginfod-webapi-concurrency.sh: Likewise.
	* run-strip-test.sh: Likewise.

2022-10-16  Mark Wielaard  <mark@klomp.org>

	* dwfl-report-offline-memory.c: Include config.h first.

2022-10-16  Mark Wielaard  <mark@klomp.org>
