@@ -1,3 +1,7 @@
+2023-02-03  Mark Wielaard  <mark@klomp.org>
+
+	* run-addr2line-C-test.sh: Check ELFUTILS_DISABLE_DEMANGLE.
+
 2023-01-22  Mark Wielaard  <mark@klomp.org>
 
 	* testfile-inlines-lto.bz2: New testfile.
